2004-09-08  Adam Jackson  <ajax@freedesktop.org>

	* xcompmgr.man, Makefile.am:
	Add a man page.

2004-08-14  Keith Packard  <keithp@keithp.com>

	* xcompmgr.c: (error), (usage), (main):
	Remove abort call as it's just annoying.
	Add -a flag to just use Automatic compositing.  No glitz, but no
	screen mangling either.

2004-08-13  Keith Packard  <keithp@keithp.com>

	* xcompmgr.c: (paint_all), (repair_win), (map_win),
	(finish_unmap_win), (add_win), (configure_win), (damage_win),
	(error), (main):
	Add name window pixmap support

2004-07-08  Ely Levy  <elylevy-xserver@cs.huji.ac.il>

	reviewed by: Keith Packard

	* xcompmgr.c: (get_time_in_milliseconds):
	Eliminate 'struct timezone tz' as it isn't used.

2004-07-08  Keith Packard  <keithp@keithp.com>

	* xcompmgr.c: (get_time_in_milliseconds), (find_fade),
	(dequeue_fade), (cleanup_fade), (enqueue_fade), (set_fade),
	(fade_timeout), (run_fades), (paint_all), (map_win),
	(finish_unmap_win), (unmap_callback), (unmap_win),
	(determine_mode), (add_win), (configure_win), (finish_destroy_win),
	(destroy_callback), (destroy_win), (error), (main):
	Add fade-in/fade-out support (-f option).
	Clean up leak of solid alpha picture per redraw of constant-alpha
	windows.

2004-06-27  Keith Packard  <keithp@keithp.com>

	* xcompmgr.c: (map_win), (unmap_win), (main):
	Only use XCompositeNameWindowPixmap when the library provides it

2004-06-26  Keith Packard  <keithp@keithp.com>

	* xcompmgr.c: (win_extents), (paint_all), (repair_win),
	(unmap_win), (usage), (main):
	Make composite manager mode run-time selectable with
	command line option:
	 -s:	server-side shadows (sharp, but follows window alpha)
	 -c:	client-side shadows (blurred, but uses window extents only)
	 -n:	no shadows (this is the default mode)

2004-06-26  Keith Packard  <keithp@keithp.com>

	* xcompmgr.c: (make_gaussian_map), (make_shadow), (shadow_picture),
	(solid_picture), (discard_ignore), (set_ignore), (should_ignore),