@@ -1,5 +1,5 @@
 bin_PROGRAMS = xcompmgr
-man_MANS = xcompmgr.man
+man_MANS = xcompmgr.1
 
 xcompmgr_LDADD = @XCOMPMGR_LIBS@ -lm
 
