@@ -4,13 +4,16 @@
 xcompmgr \- sample X compositing manager
 .SH SYNOPSIS
 .nf
-.B xcompmgr [\-acfns]
+.B xcompmgr [\-d display] [\-acfnsCFS]
 .fi
 .SH DESCRIPTION
 .B xcompmgr
 is a sample compositing manager for X servers supporting the XFIXES, DAMAGE,
 and COMPOSITE extensions.  It enables basic eye-candy effects.
 .SH OPTIONS
+.TP
+.BI \-d\ display
+Specifies the display to manage.
 .TP
 .BI \-a
 Automatic server-side compositing.  This instructs the server to use the
@@ -21,15 +24,25 @@ Client-side compositing with soft shadows and translucency support.
 .TP
 .BI \-f
 When \-c is specified, enables a smooth fade effect for transient windows like
-menus.
+menus, and for all windows on hide and restore events.
 .TP
 .BI \-n
 Simple client-side compositing.
 .TP
 .BI \-s
 Server-side compositing with hard-edged shadows.
+.TP
+.BI \-C
+When \-c is specified, attempts to avoid painting shadows on panels and docks.
+.TP
+.BI \-F
+When \-f is specified, also enables the fade effect when windows change their
+opacity, as with transset(1).
+.TP
+.BI \-S
+Enables synchronous operation.  Useful for debugging.
 .SH BUGS
-Several.
+Probably.  Please report any you find to http://bugs.freedesktop.org/.
 .SH AUTHORS
-Keith Packard, with contributions from Matthew Allum, Eric Anholt,
+Keith Packard, with contributions from Matthew Allum, Eric Anholt, Dan Doel,
 Matthew Hawn, Ely Levy, Phil Blundell, and Carl Worth.
